--- a/charts/bind9-dns/templates/service.yaml
+++ b/charts/bind9-dns/templates/service.yaml
@@ -22,10 +22,8 @@ spec:
       protocol: TCP
       port: 53
       targetPort: dns-tcp
-  {{- if (eq .Values.service.type "LoadBalancer") }}
-  {{- with .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ . }}
-  {{- end }}
+  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.service.loadBalancerIP | quote }}
   {{- end }}
   selector:
     {{- include "bind9-dns.selectorLabels" . | nindent 4 }}
