--- a/charts/bind9-dns/values.yaml
+++ b/charts/bind9-dns/values.yaml
@@ -6,6 +6,7 @@
 replicaCount: 1
 
 namespace: ""
+createNamespace: true
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: peterb83/schrack-dns
