--- a/charts/bind9-dns/templates/service.yaml
+++ b/charts/bind9-dns/templates/service.yaml
@@ -26,4 +26,6 @@ spec:
   loadBalancerIP: {{ .Values.service.loadBalancerIP | quote }}
   {{- end }}
   selector:
-    {{- include "bind9-dns.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ include "bind9-dns.fullname" . }}-deployment
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/component: app  
