--- a/charts/bind9-dns/values.yaml
+++ b/charts/bind9-dns/values.yaml
@@ -39,7 +39,7 @@ podAnnotations:
   hostnames-map: ns1
 # This is for setting Kubernetes Labels to a Pod.
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels:
+podLabels: {}
 
 dnsConfigmap:
   name: dns-config-files
