--- a/charts/bind9-dns/templates/service.yaml
+++ b/charts/bind9-dns/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "bind9-dns.labels" . | nindent 4 }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}-service
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
@@ -27,4 +27,4 @@ spec:
   {{- end }}
   selector:
     {{- include "bind9-dns.labels" . | nindent 4 }}
-    app.kubernetes.io/component: web
+    {{ include "bind9-dns.fullname" . }}-deployment
