--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
         checksum/dns-config: {{ toYaml .Values.dnsConfigmap.data | sha256sum }}
         checksum/bind9-config: {{ toYaml .Values.webmin | sha256sum }}
       labels:
+        {{- include "bind9-dns.labels" . | nindent 8 }}
         app.kubernetes.io/name: {{ include "bind9-dns.fullname" . }}-deployment
         app.kubernetes.io/instance: {{ .Release.Name }}
         app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -34,7 +35,9 @@ spec:
       serviceAccountName: {{ include "bind9-dns.serviceAccountName" . }}
       {{- with .Values.podSecurityContext }}
       selector:
-        matchLabels: {{- include "bind9-dns.selectorLabels" . | nindent 6 }}
+        matchLabels:
+          {{- include "bind9-dns.selectorLabels" . | nindent 12 }}
+          app.kubernetes.io/component: web  
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
