--- a/charts/bind9-dns/templates/service.yaml
+++ b/charts/bind9-dns/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "bind9-dns.fullname" . }}-service
+  name: {{ include "bind9-dns.fullname" . }}
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "bind9-dns.labels" . | nindent 4 }}
@@ -27,4 +27,3 @@ spec:
   {{- end }}
   selector:
     {{- include "bind9-dns.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/component: web  
