--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -9,10 +9,12 @@ spec:
   selector:
     matchLabels:
       {{- include "bind9-dns.labels" . | nindent 8 }}
-      app.kubernetes.io/name: {{ include "bind9-dns.selectorLabels" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
       app.kubernetes.io/managed-by: {{ .Release.Service }}
       app.kubernetes.io/component: web
+      {{- with .Values.podLabels }}
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
   template: 
     metadata:
       {{- with .Values.podAnnotations }}
@@ -62,8 +64,6 @@ spec:
           protocol: TCP
           name: dns-tcp
         env: 
-          - name: BIND9_SERVER_NAME
-            value: {{ template "bind9-dns.fullname" . }}
           - name: UPDATE_DNS_CONF
             valueFrom:
               configMapKeyRef:
