--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,14 @@ on:
       - main
 
 jobs:
+  helm-check:
+    runs-on: ubuntu-latest
+    steps:
+    - name: helm-check
+      uses: actions/checkout@v4
+      env:
+        CHART_LOCATION: ./charts/bind9-dns
+        CHART_VALUES: ./charts/bind9-dns/values.yaml
   release:
     # depending on default permission settings for your org (contents being read-only or read-write for workloads), you will have to add permissions
     # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
