--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -8,9 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "bind9-dns.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
-      app.kubernetes.io/component: web
+      {{- include "bind9-dns.selectorLabels" . | nindent 4 }}
   template: 
     metadata:
       {{- with .Values.podAnnotations }}
@@ -21,9 +19,7 @@ spec:
         checksum/dns-config: {{ toYaml .Values.dnsConfigmap.data | sha256sum }}
         checksum/bind9-config: {{ toYaml .Values.webmin | sha256sum }}
       labels:
-        app.kubernetes.io/name: {{ include "bind9-dns.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/component: web
+        {{- include "bind9-dns.labels" . | nindent 4 }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
