--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -19,7 +19,8 @@ spec:
         checksum/dns-config: {{ toYaml .Values.dnsConfigmap.data | sha256sum }}
         checksum/bind9-config: {{ toYaml .Values.webmin | sha256sum }}
       labels:
-        {{- include "bind9-dns.labels" . | nindent 4 }}
+        {{- include "bind9-dns.labels" . | nindent 8 }}
+        app.kubernetes.io/component: web
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
