Adding namespace to helpers and manifests

--- a/charts/bind9-dns/templates/bind9-data-pvc.yaml
+++ b/charts/bind9-dns/templates/bind9-data-pvc.yaml
@@ -4,6 +4,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ template "bind9-dns.fullname" . }}-data
+  namespace: {{ template "bind9-dns.namespace" . }}
   labels:
     {{- include "bind9-dns.labels"  ( dict "component" "app"  "rootContext" $ ) | nindent 4 }}
   annotations:
