--- a/charts/bind9-dns/templates/serviceaccount.yaml
+++ b/charts/bind9-dns/templates/serviceaccount.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "bind9-dns.serviceAccountName" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ template "bind9-dns.namespace" . }}
   labels:
     {{- include "bind9-dns.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
