--- a/charts/bind9-dns/templates/secrets.yaml
+++ b/charts/bind9-dns/templates/secrets.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.dnsSecret.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ template "bind9-dns.namespace" . }}
 type: Opaque
 data:
   ROOT_PASSWORD: {{ default "" .Values.webmin.rootPassword | b64enc | quote }}
