--- a/charts/bind9-dns/templates/service.yaml
+++ b/charts/bind9-dns/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "bind9-dns.fullname" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ template "bind9-dns.namespace" . }}
   labels:
     {{- include "bind9-dns.labels" . | nindent 4 }}
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -27,4 +27,3 @@ spec:
   {{- end }}
   selector:
     {{- include "bind9-dns.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/component: web
