Fixing duplicate cm name

--- a/charts/bind9-dns/values.yaml
+++ b/charts/bind9-dns/values.yaml
@@ -43,6 +43,7 @@ podLabels: {}
 
 dnsConfigmap:
   name: dns-config-files
+  configMapName: dns-config-files
   data:
     dnsConfiguration: ""
     reverseDnsConfiguration: ""
