--- a/charts/bind9-dns/templates/webmin-cm.yaml
+++ b/charts/bind9-dns/templates/webmin-cm.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.bind9.configMapName }}
+  name: {{ .Values.dnsConfigmap.configMapName }}
   namespace: {{ template "bind9-dns.namespace" . }}
 data:
   WEBMIN_ENABLED: '{{ .Values.webmin.enabled }}'
