Update configmap name

--- a/charts/bind9-dns/values.yaml
+++ b/charts/bind9-dns/values.yaml
@@ -43,7 +43,7 @@ podLabels: {}
 
 dnsConfigmap:
   name: dns-config-files
-  configMapName: dns-config-files
+  configMapName: bind9-dns-config
   data:
     dnsConfiguration: ""
     reverseDnsConfiguration: ""
