--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -17,7 +17,8 @@ spec:
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
-        checksum/webmin-config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        checksum/webmin-config: {{ include (print $.Template.BasePath "/webmin-cm.yaml") . | sha256sum }} 
+        checksum/dns-config: {{ include (print $.Template.BasePath "/configmapyaml") . | sha256sum }}
       labels:
         {{- include "bind9-dns.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
