--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
         checksum/webmin-config: {{ include (print $.Template.BasePath "/webmin-cm.yaml") . | sha256sum }} 
-        checksum/dns-config: {{ include (print $.Template.BasePath "/configmapyaml") . | sha256sum }}
+        checksum/dns-config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       labels:
         {{- include "bind9-dns.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
