--- a/charts/bind9-dns/templates/deployment.yaml
+++ b/charts/bind9-dns/templates/deployment.yaml
@@ -101,7 +101,7 @@ spec:
             mountPath: {{ .Values.bind9.datadir }}
             subPath: {{ ternary "data" (printf "%s/data" .Values.persistence.subPath) (empty .Values.persistence.subPath) }}
           {{- end }}
-          - name: config
+          - name: config-files
             mountPath: {{ .Values.dnsConfigmap.configDir }}
             readOnly: true
       volumes:
@@ -117,9 +117,11 @@ spec:
           persistentVolumeClaim:
             claimName: {{ if .Values.persistence.bind9Data.existingClaim }}{{ .Values.persistence.bind9Data.existingClaim }}{{- else }}{{ template "bind9-dns.fullname" . }}-data-pvc{{- end }}
         {{- end }}
-        - name: config
+        {{- if .Values.dnsConfigmap.name }}
+        - name: config-files
           configMap:
             name: {{ .Values.dnsConfigmap.name }}
+        {{- end }}
       restartPolicy: Always
       imagePullSecrets:
       - name: docker-peterb83
