--- a/charts/bind9-dns/values.yaml
+++ b/charts/bind9-dns/values.yaml
@@ -17,8 +17,7 @@ image:
 imagePullSecrets: []
 # This is to override the chart name.
 nameOverride: ""
-namespaceOverride: "bind9-test"
-
+namespaceOverride: ""
 fullnameOverride: ""
 
 # This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
@@ -43,7 +42,6 @@ podLabels: {}
 
 dnsConfigmap:
   name: dns-config-files
-  configDir: /schrack/config
   data:
     dnsConfiguration: ""
     reverseDnsConfiguration: ""
